--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -41,7 +41,7 @@
             android:layout_height="match_parent">
 
             <EditText
-                android:id="@+id/title"
+                android:id="@+id/etTitlePost"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_alignParentStart="true"
@@ -49,18 +49,19 @@
                 android:hint="Title" />
 
             <EditText
-                android:id="@+id/description"
+                android:id="@+id/etDescriptionPost"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/title"
+                android:layout_below="@id/etTitlePost"
                 android:hint="Description" />
 
+<!--
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="250dp"
                 android:layout_height="150dp"
-                android:layout_below="@id/description"
+                android:layout_below="@id/etDescriptionPost"
                 android:layout_marginLeft="70dp" />
 
             <Button
@@ -71,13 +72,17 @@
                 android:layout_marginLeft="130dp"
                 android:text="chose photo"/>
 
+            -->
+
             <EditText
                 android:id="@+id/tags"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/photo"
+                android:layout_below="@id/etDescriptionPost"
                 android:layout_marginTop="10dp"
                 android:hint="Tags" />
+
+         <!--
 
             <Button
                 android:id="@+id/createPost"
@@ -97,6 +102,8 @@
                 android:layout_toRightOf="@id/createPost"
                 android:layout_marginLeft="100dp"
                 android:text="cancel" />
+
+            -->
 
         </RelativeLayout>
 
